--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div>
+    <div class="container">
       <h1>To-Do List</h1>
-      <div>
+      <div class="input-container">
         <input type="text" placeholder="Add a new task..." id="taskInput" />
         <button onclick="addTask()">Add</button>
       </div>
